--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,7 +1,14 @@
 body {
-  font-family: 'Noto Sans', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
 }
 
+* {
+    box-sizing: border-box;
+}
+
+#img-frame-cop {
+    margin: 10px 0;
+}
 
 .footer .icon-link {
     font-size: 25px;
@@ -14,38 +21,33 @@ body {
 }
 
 .dnerf {
-  font-variant: small-caps;
+    font-variant: small-caps;
 }
 
-
 .teaser .hero-body {
-  padding-top: 0;
-  padding-bottom: 3rem;
+    padding-top: 0;
+    padding-bottom: 3rem;
 }
 
 .teaser {
-  font-family: 'Google Sans', sans-serif;
+    font-family: 'Google Sans', sans-serif;
 }
 
-
-.publication-title {
-}
+.publication-title {}
 
 .publication-banner {
-  max-height: parent;
-
+    max-height: parent;
 }
 
 .publication-banner video {
-  position: relative;
-  left: auto;
-  top: auto;
-  transform: none;
-  object-fit: fit;
+    position: relative;
+    left: auto;
+    top: auto;
+    transform: none;
+    object-fit: fit;
 }
 
-.publication-header .hero-body {
-}
+.publication-header .hero-body {}
 
 .publication-title {
     font-family: 'Google Sans', sans-serif;
@@ -67,11 +69,10 @@ body {
     font-weight: bolder;
 }
 
-.publication-authors {
-}
+.publication-authors {}
 
 .publication-authors a {
-   color: hsl(204, 86%, 53%) !important;
+    color: hsl(204, 86%, 53%) !important;
 }
 
 .publication-authors a:hover {
@@ -79,14 +80,13 @@ body {
 }
 
 .author-block {
-  display: inline-block;
+    display: inline-block;
 }
 
-.publication-banner img {
-}
+.publication-banner img {}
 
 .publication-authors {
-  /*color: #4286f4;*/
+    /*color: #4286f4;*/
 }
 
 .publication-video {
@@ -94,7 +94,6 @@ body {
     width: 100%;
     height: 0;
     padding-bottom: 56.25%;
-
     overflow: hidden;
     border-radius: 10px !important;
 }
@@ -107,31 +106,27 @@ body {
     height: 100%;
 }
 
-.publication-body img {
-}
+.publication-body img {}
 
 .results-carousel {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .results-carousel .item {
-  margin: 5px;
-  overflow: hidden;
-  padding: 20px;
-  font-size: 0;
+    margin: 5px;
+    overflow: hidden;
+    padding: 20px;
+    font-size: 0;
 }
 
 .results-carousel video {
-  margin: 0;
+    margin: 0;
 }
 
 .slider-pagination .slider-page {
-  background: #000000;
+    background: #000000;
 }
 
-.eql-cntrb { 
-  font-size: smaller;
+.eql-cntrb {
+    font-size: smaller;
 }
-
-
-
